# npmai

./: Dockerfile  LARA.md  README.md  app.py  main.py  npmai-api-render_layer.py  npmai.py  pyproject.toml
.devin/: wiki.json
.github/workflows/: codeql.yml
Docs/: index.html
Docs/templates/: aadarsh.html  index.html
NPMRAG-API-Framework./: Dockerfile  NPMRAG-API-Framework.py  entrypoint.sh  requirements.txt
load_balancer/: requirements.txt
load_balancer/load_balancer_fallback/: app.py
models/: Dockerfile  entrypoint.sh  falcon:7b-instruct&codellama:7b-instruct.py  internlm2:7b&baichuan.py  llama3.2&qwen2.5-coder:7b.py  mistral:7b.py  phi3:medium.py  requirements.txt  vicuna:7b&gemma2:9b.py
models/Space1/: Dockerfile  entrypoint.sh  main.py
models/Space10/: main.py  requirements.txt
models/Space11/: requirements.txt
models/Space4/: entrypoint.sh
models/space13/: app.py  entrypoint.sh
npmai/: __init__.py  main.py  npmai.py
npmai-api-render_layer/: Dockerfile  npmai-api-render_layer.py
npmai-selenium(NOT USED ANYWHERE JUST FOR DEMO)/: npmai.py
templates/: index.html
