[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npmai"
version = "0.1.4"
authors = [
  { name="Sonu Kumar (Viral Boy Bihar)", email="sonuramashishnpm@gmail.com" }
]
description = "A lightweight Ollama(no ollama installation needed) based LangChain-compatible LLM bridge ('LLaMA-3.2','CodeLLaMA-Instruct 7B','Gemma-2-Instruct 9B','Mistral 7B Instruct','Qwen-2.5-Coder 7B','Phi-3 Medium (8B)','Falcon 7B Instruct','Baichuan-2-7B','InternLM-Chat-7B','Vicuna 7B') built by Sonu Kumar."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }

dependencies = [
  "requests",
  "langchain-core"
  

]

[project.urls]
Homepage = "https://npmai.onrender.com"
Source = "https://github.com/sonuramashishnpm/npmai"
