[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npmai"
version = "0.1.6"
authors = [
  { name="Sonu Kumar (Viral Boy Bihar)", email="sonuramashishnpm@gmail.com" }
]
description = "A framework developed for supporting in development of AI Agents without installing a lot of things and in free on cloud without signin or signup or limit hurdles by Sonu Kumar (Viral Boy Bihar)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }

dependencies = [
  "requests",
  "langchain-core"
  

]

[project.urls]
Homepage = "https://npmai.netlify.com"
Source = "https://github.com/sonuramashishnpm/npmai"
