[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npmai"
version = "0.1.8"
authors = [
  { name="Sonu Kumar (Viral Boy Bihar)", email="sonuramashishnpm@gmail.com" }
]
description = "npmai is a lightweight Python package designed to bridge the gap between users and open-source LLMs. Connect with Ollama and 10+ other powerful models instantly— no installation, no login, and no API keys required, and help in development of RAG Agents without installing anything locally or on cloud and it is free without sigin or signup or any type of limit."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }

dependencies = [
  "requests",
  "langchain-core"
  

]

[project.urls]
Homepage = "https://npmai.netlify.com"
Source = "https://github.com/sonuramashishnpm/npmai"




